@@ -11,6 +11,12 @@ Package author: Mikhail S. Dubrovin
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-03-09
+2016-10-19 Mikhail S. Dubrovin
+- app/dcs - set cdir_def = None
+- DCFileName.py - add methods *_repo, calibdir check for None and 'None'
+- update doc in a few modules.
+	
 Tag: V00-03-08
 2016-10-17 Mikhail S. Dubrovin
 - app/dcs - hide test print messages
